Add comments to example.config

--- a/example.config
+++ b/example.config
@@ -1,13 +1,15 @@
 #This is an example config file.
-#Please make sure to save config files with a .config suffix in the filename. 
+#Please make sure to save config files with a .config suffix in the filename.
 
 #The name of the package
 name = tor-browser-de
 
 #Space separated list of needed GPG keys
 #Optional
+#Default values is ""
 pgp_keys = 2E1AC68ED40814E0
 
 #Disable building and updating of the package
 #Optional
+#Default value is false
 disabled = true
